--- a/style/style.css
+++ b/style/style.css
@@ -140,17 +140,20 @@ mark{
 }
 #progress .progress__bar{
     height: 100%;
-    transition: 1s;
+    display: flex;
+    justify-content: space-evenly;
+    transform: skewX(340deg);
 }
-#progress .progress__animation{
+#progress .progress__block{
     animation: pulsePercent 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite;
-    width: 0%;
+    width: 100%;
     height: 100%;
+    padding: 0px 3px;
+    opacity: 0;
 }
-#progress .progress__animation .bg{
+#progress .progress__block .bg{
     background-color: #4158D0;
     background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
-    animation: AnimationName 10s ease infinite;
     width: 100%;
     height: 100%;
 }
@@ -174,12 +177,13 @@ mark{
 }
 @keyframes pulsePercent {
     0% {
-        width: 0%;
-        opacity: 1;
+        clip-path: inset(0 100% 0 0);
+    }
+    50%{
+        clip-path: inset(0 0 0 0);
     }
     100%{
-        width: 100%;
-        opacity: 0;
+        clip-path: inset(0 0 0 100%);
     }
 }
 @keyframes endTailFlow {
